[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/PlayerGui/NavTarget/NavTarget.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="NavTarget" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texturePlanetSprite" type="TextureRect" parent="Panel2/VBoxContainer"]
visible = false
margin_right = 1888.0
margin_bottom = 1056.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="labelPlanetName" type="Label" parent="Panel2/VBoxContainer"]
visible = false
margin_top = 1028.0
margin_right = 1904.0
margin_bottom = 1064.0
rect_min_size = Vector2( 0, 36 )
text = "A Planet"
align = 1
valign = 1
